--- a/MobileServer/package.json
+++ b/MobileServer/package.json
@@ -7,6 +7,8 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "firebase": "^4.6.2",
+    "firebase-admin": "^5.5.1",
     "request": "^2.83.0"
   },
   "devDependencies": {},
