lots of changes, gui is actual looking better

--- a/gui/app/src/main/AndroidManifest.xml
+++ b/gui/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="wpi.whatsfordinner">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".RecipeActivity">
+
+        </activity>
+        <activity android:name=".RecipeDisplay">
 
         </activity>
     </application>
