--- a/gui/app/src/main/AndroidManifest.xml
+++ b/gui/app/src/main/AndroidManifest.xml
@@ -12,19 +12,37 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".RecipeActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+        <activity android:name=".RecipeDisplay"
+            android:screenOrientation="portrait">
+
+        </activity>
+
+        <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".RecipeActivity">
 
         </activity>
-        <activity android:name=".RecipeDisplay">
 
+        <activity android:name=".MemberLogin"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar">
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
