this is about as good as it is going to be before submission, I tried to get more added into it, but there is only so much time I can allot to this.. but everything is functional, so I guess that's a good thing

--- a/gui/app/src/main/AndroidManifest.xml
+++ b/gui/app/src/main/AndroidManifest.xml
@@ -40,6 +40,18 @@
             android:theme="@android:style/Theme.NoTitleBar">
         </activity>
 
+        <activity android:name=".AboutActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity android:name=".DietActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity android:name=".SettingsActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
